	mention that it is called from the *Remember* buffer, and does not
	have any functional overlap with the `remember' function.
	(remember-finalize): Remove autoload cookie.  Rename from
	remember-buffer to emphasize that this does not have any
	functional overlap with the `remember' function.
	(remember-destroy): Remove autoload cookie.

2007-11-01  Glenn Morris  <rgm@gnu.org>

	* doc-view.el (doc-view-cache-directory): Remove superfluous concat.

	* mail/footnote.el (footnote-numeric-regexp)
	(footnote-english-upper-regexp, footnote-english-lower-regexp)
	(footnote-roman-lower-regexp, footnote-roman-upper-regexp):
	Match multi-character footnotes.

	* textmodes/nroff-mode.el (nroff-mode): Set indent-line-function.
	(nroff-indent-line-function): New function.
	(nroff-count-text-lines): Use nroff-forward-text-line rather than
	obsolete alias.

2007-11-01  Ryan Yeske  <rcyeske@gmail.com>

	* net/rcirc.el (rcirc-last-quit-line, rcirc-last-line)
	(rcirc-elapsed-lines): New argument PROCESS.  Update callers.
	(rcirc-print): Only update the line count when not marking the
	line as omittable.
	(rcirc-log-write): Specify coding system when writing logfile.
	(rcirc-markup-fill): Make sure ellipsis does not cause line to wrap.

2007-11-01  Dan Nicolaescu  <dann@ics.uci.edu>

	* printing.el (printing): Fix :version, printing.el was included
	for in emacs-22.1.
	(pr-path-style, pr-path-alist, pr-txt-name)
	(pr-txt-printer-alist, pr-ps-name, pr-ps-printer-alist)
	(pr-temp-dir, pr-ps-temp-file, pr-file-modes, pr-gv-command)
	(pr-gs-command, pr-gs-switches, pr-gs-device, pr-gs-resolution)
	(pr-print-using-ghostscript, pr-file-tumble, pr-auto-region)
	(pr-auto-mode, pr-mode-alist, pr-ps-utility)
	(pr-ps-utility-alist, pr-menu-char-height, pr-menu-char-width)
	(pr-setting-database, pr-visible-entry-list)
	(pr-delete-temp-file, pr-list-directory, pr-buffer-name)
	(pr-buffer-name-ignore, pr-buffer-verbose): Remove incorrect
	:version.
